[Deployment] Use jackson in execcontroller